# lineRGB

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  Linemod_cv_modificato.cpp  README.md  generate_similarity_rgb.cpp  linemod_clean.cpp  objdetect_cv_modificato.h  test.cpp  test.h
backup_tesi/: objdetect_cv_modificato.h
include/: objdetect_line_rgb.hpp
src/: CMakeLists.txt  CMakeLists.txt~  line_rgb.cpp  line_test.cpp  line_test.cpp_DISABLED_FOR_CMAKE  trainer.cpp
src/utils/: line_camera_rgb.cpp
utils/: generate_similarity_HSV.cpp
